[package]
name = "autons"
description = "Autonomous selection & routing library for vexide."
repository = "https://github.com/vexide/autons/"
authors = ["Tropical"]
license-file = "LICENSE.md"
keywords = ["vex", "vexide", "vex-robotics", "robotics", "autonomous"]
version = "0.1.0-test.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
upload-strategy = "differential"
slot = 1
icon = "cool-x"
compress = true

[dependencies]
vexide = { version = "0.7.0-beta.3", default-features = false, features = [ "async", "core", "devices" ] }

[dev-dependencies]
vexide = "0.7.0-beta.3"
