[package]
name = "autons"
description = "Autonomous selection & routing library for vexide."
repository = "https://github.com/vexide/autons/"
authors = ["Tropical"]
license-file = "LICENSE"
keywords = ["vex", "vexide", "vex-robotics", "robotics", "autonomous"]
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
upload-strategy = "differential"
slot = 1
icon = "cool-x"
compress = true

[package.metadata.docs.rs]
targets = ["armv7a-none-eabi"]

[dependencies]
vexide = { version = "0.8.0", default-features = false, features = [
	"async",
	"core",
	"devices",
] }
vex-sdk = "0.28.0"

[dev-dependencies]
vexide = "0.8.0"

[features]
default = ["simple", "compete"]
simple = []
compete = []
